# ArduinoFake

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  library.json  platformio.ini
.github/workflows/: check.yaml
cmake/: git-download.cmake
examples/mock-injection/: platformio.ini
examples/mock-injection/src/: MyService.cpp
examples/mock-injection/test/: test_my_service.cpp
examples/wiring-blink/: README.rst  platformio.ini
examples/wiring-blink/test/: test_main.cpp
src/: Arduino.h  ArduinoFake.cpp  ArduinoFake.h  CMakeLists.txt  Client.h  ClientFake.cpp  ClientFake.h  EEPROM.h  EEPROMFake.cpp  EEPROMFake.h  Function.h  FunctionFake.cpp  FunctionFake.h  HardwareSerialFake.cpp  HardwareSerialFake.h  Print.h  PrintFake.cpp  PrintFake.h  SPI.h  SPIFake.cpp  SPIFake.h  Serial.h  SerialFake.cpp  SerialFake.h  Stream.h  StreamFake.cpp  StreamFake.h  WString.h  Wire.h  WireFake.cpp  WireFake.h
src/arduino/: Arduino.h  EEPROM.h  IPAddress.cpp  IPAddress.h  Print.h  README.md  SPI.h  USBAPI.h  WCharacter.h  WString.cpp  WString.h  Wire.h  noniso.c  noniso.h  pgmspace.h  pins_arduino.h
src/arduino/avr/: interrupt.h
src/fakeit/: README.md  fakeit.hpp
test/: CMakeLists.txt  main.cpp  test_arduino_string.h  test_client.h  test_context.h  test_eeprom.h  test_function.h  test_hardware_serial.h  test_include.h  test_print.h  test_serial.h  test_spi.h  test_stream.h  test_wire.h
